--- a/src/app/components/createpost/createpost.component.html
+++ b/src/app/components/createpost/createpost.component.html
@@ -1,7 +1,7 @@
 <div id="cratePost" *ngIf="isShow">
   <div id="postInBox">
-    <div id="closeModal" (click)="onChange()">
-      <div class="x-text" for="">X</div>
+    <div id="closeModal">
+      <div class="x-text" for="" (click)="onChange()">X</div>
     </div>
     <div id="title">
       <div class="title-box">
@@ -17,8 +17,8 @@
         <div id="areaText">
           <textarea class="text-area" placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
         </div>
-        <div id="buttonBox" (click)="submitPost()">
-          <button class="post-button" [disabled]="!createPost.content">Post</button>
+        <div id="buttonBox">
+          <button class="post-button" (click)="submitPost()" [disabled]="!createPost.content">Post</button>
         </div>
       </div>
     </div>
