--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,7 +1,7 @@
 <div id="modalSignUp" *ngIf="!isClose">
   <div id="modalBox">
-    <div id="closeModal" (click)="onCloseTab()">
-      <label class="x-text" for="">X</label>
+    <div id="closeModal">
+      <label class="x-text" for="" (click)="onCloseTab()">X</label>
     </div>
     <div id="signUpHeader">
       <label class="text-signin" for="">Sign Up</label>
