--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -22,6 +22,7 @@
       </div>
     </div>
   </div>
+  <app-story></app-story>
 </div>
 <div *ngIf="isOpenSignIn">
   <app-signin (changeIsOpen)="closeModalandChangeIsOpenSignIn($event)"></app-signin>
