--- a/src/app/components/createpost/createpost.component.html
+++ b/src/app/components/createpost/createpost.component.html
@@ -15,7 +15,17 @@
     <div id="postBox">
       <div id="postinBox">
         <div id="areaText">
-          <textarea class="text-area" placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
+          <mat-form-field class="example-full-width" style="width: 100%;" appearance="fill">
+            <mat-label>link</mat-label>
+            <!-- <textarea matInput placeholder="What are you comment ?" [(ngModel)]="comment"></textarea> -->
+            <textarea matInput placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
+          </mat-form-field>
+          <mat-form-field class="example-full-width" style="width: 100%;" appearance="fill">
+              <mat-label>คุณกำลังคิดอะไรอยู่ อุจิว</mat-label>
+              <!-- <textarea matInput placeholder="What are you comment ?" [(ngModel)]="comment"></textarea> -->
+              <textarea style="height: 150px" matInput placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
+          </mat-form-field>
+          <!-- <textarea class="text-area" placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea> -->
         </div>
         <div id="buttonBox" (click)="submitPost()">
           <button class="post-button" [disabled]="!createPost.content">Post</button>
