--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -27,41 +27,24 @@ $colorTxt: rgb(51, 51, 51);
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     #filterLeft {
                         display: flex;
-                        #lastestButtonDis {
+                        #newButtonDis, #groupButtonDis, #popularButtonDis {
                             display: flex;
                             align-items: center;
                             border-radius: 20px;
-                            color: #1B4E8C;
+                            color: #7a7a7a;
                             margin-right: 40px;
                             height: 60%;
                             padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
+                            .logo {
                                 margin-right: 5px
                             }
                             &:hover {
-                                background-color: #99d4d36b;
+                                background-color: #c4c4c4;
                                 cursor: pointer;
                             }
                         }
-                        #popularButtonDis {
-                            display: flex;
-                            align-items: center;
-                            border-radius: 20px;
-                            color: #1B4E8C;
-                            margin-right: 40px;
-                            height: 60%;
-                            padding: 5px 10px;
-                            transition: 0.3s;
-                            .logoFire {
-                                margin-right: 5px
-                            }
-                            &:hover {
-                                background-color: #99d4d36b;
-                                cursor: pointer;
-                            }
-                        }
-                        #lastestButtonEna {
+                        #newButton, #groupButton, #popularButton {
                             display: flex;
                             align-items: center;
                             border-radius: 20px;
@@ -71,25 +54,7 @@ $colorTxt: rgb(51, 51, 51);
                             height: 60%;
                             padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
-                                margin-right: 5px
-                            }
-                            &:hover {
-                                background-color: #99d4d36b;
-                                cursor: pointer;
-                            }
-                        }
-                        #popularButtonEna {
-                            display: flex;
-                            align-items: center;
-                            border-radius: 20px;
-                            color: #1B4E8C;
-                            background-color: #99d4d36b;
-                            margin-right: 40px;
-                            height: 60%;
-                            padding: 5px 10px;
-                            transition: 0.3s;
-                            .logoFire {
+                            .logo {
                                 margin-right: 5px
                             }
                             &:hover {
@@ -241,69 +206,36 @@ $colorTxt: rgb(51, 51, 51);
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     #filterLeft {
                         display: flex;
-                        #lastestButtonDis {
+                        #newButtonDis, #groupButtonDis, #popularButtonDis {
                             display: flex;
                             align-items: center;
                             border-radius: 20px;
-                            color: #1B4E8C;
-                            margin-right: 40px;
+                            color: #7a7a7a;
+                            margin-right: 10px;
                             height: 60%;
                             padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
+                            .logo {
                                 margin-right: 5px
                             }
+                            .txtFilter {
+                            }
                             &:hover {
-                                background-color: #99d4d36b;
+                                background-color: #c4c4c4;
                                 cursor: pointer;
                             }
                         }
-                        #popularButtonDis {
+                        #newButton, #groupButton, #popularButton {
                             display: flex;
                             align-items: center;
-                            border-radius: 20px;
-                            color: #1B4E8C;
-                            margin-right: 40px;
-                            height: 60%;
-                            padding: 5px 10px;
-                            transition: 0.3s;
-                            .logoFire {
-                                margin-right: 5px
-                            }
-                            &:hover {
-                                background-color: #99d4d36b;
-                                cursor: pointer;
-                            }
-                        }
-                        #lastestButtonEna {
-                            display: flex;
-                            align-items: center;
-                            border-radius: 20px;
+                            border-radius: 10px;
                             color: #1B4E8C;
                             background-color: #99d4d36b;
-                            margin-right: 40px;
+                            margin-right: 20px;
                             height: 60%;
                             padding: 5px 10px;
                             transition: 0.3s;
-                            .logoNew {
-                                margin-right: 5px
-                            }
-                            &:hover {
-                                background-color: #99d4d36b;
-                                cursor: pointer;
-                            }
-                        }
-                        #popularButtonEna {
-                            display: flex;
-                            align-items: center;
-                            border-radius: 20px;
-                            color: #1B4E8C;
-                            background-color: #99d4d36b;
-                            margin-right: 40px;
-                            height: 60%;
-                            padding: 5px 10px;
-                            transition: 0.3s;
-                            .logoFire {
+                            .logo {
                                 margin-right: 5px
                             }
                             &:hover {
