--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -3,12 +3,14 @@
   min-height: 100vh
   display: flex
   flex-direction: column
-  background-color: #C9FFE5DA
+  background-color: white
+  padding-bottom: 20px
   #groupInfo
     display: flex
     flex-flow: column
     width: 100%
     height: 350px
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25)
     #groupBanner
       position: relative
       width: 100%
