--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,6 +4,7 @@ $fontColor: white;
     background-color: #99D4D3;
     $navHeight: 50px;
     height: $navHeight;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     #content {
       display: flex;
       height: 100%;
@@ -115,6 +116,7 @@ $fontColor: white;
 
 @media (max-width: 600px) { 
   #navbar {
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: #99D4D3;
     $navHeight: 50px;
     height: $navHeight;
