--- a/src/app/components/postfeed/postfeed.component.scss
+++ b/src/app/components/postfeed/postfeed.component.scss
@@ -1,7 +1,7 @@
 #postfeed {
     position: relative;
-    background-color: rgb(255, 255, 255);
     border-radius: 5px;
+    background-color: white;
     #allContent {
         position: relative;
         margin-top: 10px;
@@ -45,7 +45,7 @@
             }
         }
         #postfeedContent {
-            padding: 20px 20px 10px 0;
+            padding: 20px 10px 10px 0;
             #header {
                 display: flex;
                 align-items: center;
@@ -76,7 +76,7 @@
                     #postby {
                         display: flex;
                         color: gray;
-                        font-size: 12px;
+                        font-size: 10px;
                         #postbyTxt {
                             padding: 0px 3px;
                         }
@@ -126,12 +126,12 @@
     }
     #dummyOpen {
         z-index: 1;
+        border-radius: 5px;
         position: absolute;
         top: 0;
         left: 0;
         width: 100%;
         height: 100%;
-        border-radius: 5px;
         &:hover {
             cursor: pointer;
             border: solid #99d4d3 1px;
