--- a/src/app/components/post/post.component.scss
+++ b/src/app/components/post/post.component.scss
@@ -15,25 +15,28 @@
     z-index: 9999999;
   }
   #bgBox {
-    background-color: #99d4d36b;
+    background-color: #99d4d300;
     max-width: 1200px;
     width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
     height: 100%;
+    border-radius: 5px;
     #topBar {
-      max-width: 1200px;
-      height: 40px;
+      background-color: #fff;
+      height: 45px;
       width: 100%;
       align-items: center;
       position: fixed;
+      z-index: 20;
+      box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
       .arrow {
-        color: #fff;
+        color: #6db784;
         font-size: 30px;
-        padding: 20px 40px;
+        padding: 8px 40px;
         &:hover {
-          color: #6db784;
+          color: #6db785c4;
           cursor: pointer;
         }
       }
@@ -124,21 +127,20 @@
                   }
                 }
               }
-              .change-commnet {
-                .edit-comment {
+                .change-commnet {
+                  .edit-comment {}
                 }
-              }
             }
           }
           .content-text {
-            margin-left: 10px;
-            margin-top: 5px;
-            width: 600px;
-            word-wrap: break-word;
+              margin-left: 10px;
+              margin-top: 5px;
+              max-width: 600px;
+              width: 100%;
             #text {
               font-size: 14px;
             }
-          }
+           }
         }
       }
     }
