--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -1,5 +1,7 @@
 .ranking {
     width: 305px;
+    display: flex;
+    flex-direction: column;
     height: 410px;
     background-color:rgb(252, 252, 252);
     border-radius: 5px;
@@ -18,6 +20,7 @@
          font-size: 16px;
          
         }
+
         #photo {
             width: 100%;
             height: 107px;
@@ -26,35 +29,39 @@
             filter: brightness(50%);
         }
     }
-    .userflex1 {
+    .content {
         display: flex;
-        box-sizing: border-box;
-    }
-    .content1 {
-        display: flex;
-        box-sizing: border-box;
-        padding-top: 15px;
-        padding-left: 20px;
-        border-bottom: 1px solid rgb(206, 202, 202);
-        &:last-child{border-bottom: none; }
-    }
-    .userPicFlex {
-        display: flex;
-        box-sizing: border-box;
-        padding-left: 20px;
-        padding-top: 1px;
-        #picUser {
-            width: 30px;
-            height: 30px;
+        flex-direction: column;
+        overflow-y: overlay;
+        .userflex1 {
+            display: flex;
+            box-sizing: border-box;
+        }
+        .content1 {
+            display: flex;
+            box-sizing: border-box;
+            padding-top: 15px;
+            padding-left: 20px;
+            border-bottom: 1px solid rgb(206, 202, 202);
+            &:last-child{border-bottom: none; }
+        }
+        .userPicFlex {
+            display: flex;
+            box-sizing: border-box;
+            padding-left: 20px;
+            padding-top: 1px;
+            #picUser {
+                width: 30px;
+                height: 30px;
+                &:hover {cursor: pointer;}
+            }
+        }
+        .userName {
+            padding-left: 35px;
+            padding-top: 5px;
+            padding-right: 10px;
             &:hover {cursor: pointer;}
         }
     }
-    .userName {
-        padding-left: 35px;
-        padding-top: 5px;
-        padding-right: 10px;
-        &:hover {cursor: pointer;}
-    }
-   
 }
 
