create group and refresh

--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -5,7 +5,7 @@
   <app-createpost (changeCreatePost)="closeModalandChangeValue($event)" (postSuccess)="getPostFormModal($event)"></app-createpost>
 </div>
 <div *ngIf='showCreateGroup'>
-  <app-creategroup (changeCreateGroup)="closeModalandChangeValue($event)" (createGroupSuccess)="getGroupFormModal($event)"></app-creategroup>
+  <app-creategroup (changeCreateGroup)="closeModalandChangeValue($event)"></app-creategroup>
 </div>
 <ng-template #afterLoading>
   <div class="miniLoading" *ngIf='miniLoading;'>
