--- a/src/app/components/chart/chart.component.html
+++ b/src/app/components/chart/chart.component.html
@@ -1,1 +1,4 @@
-
+<div id="chart-panel">
+    <div id="chartTxt">Group Member Chart</div>
+    <p-chart type="doughnut" [data]="groupsChartData" ></p-chart>
+</div>
