--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -4,7 +4,7 @@
   display: grid;
   grid-template-columns: 50% 50%;
   //background-color: #99D4D3;
-  background: linear-gradient(-45deg, #ffffff, #99D4D3, #8bb899, #a1ffe9);
+  background: linear-gradient(-45deg, #ffffff, #99D4D3, #96ffe7, #a1ffe9);
 	background-size: 400% 400%;
 	animation: gradient 15s ease infinite;
   #homeImage {
