--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -38,10 +38,18 @@
                         <i class="fas fa-ellipsis-h"></i>
                     </button>
                     <mat-menu #menu="matMenu" xPosition="after">
-                    <button mat-menu-item (click)="Deletepost()">
-                        <mat-icon>delete_outline</mat-icon>
-                        <span>Delete post</span>
-                    </button>
+                    <div *ngIf="userId.id === post.owner_id.id; else cantDelete">
+                        <button mat-menu-item (click)="Deletepost()">
+                            <mat-icon>delete_outline</mat-icon>
+                            <span>Delete post</span>
+                        </button>
+                    </div>
+                    <ng-template #cantDelete>
+                        <button mat-menu-item disabled>
+                            <mat-icon>delete_outline</mat-icon>
+                            <span>Delete post</span>
+                        </button>
+                    </ng-template>
                     </mat-menu>
                 </div>
             </div>
