--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -65,6 +65,9 @@
           border: none
           color: white
           background-color: #44d7a8
+      #option
+        margin-top: 0.5em
+        margin-left: 0.75em
   .groupFeed
     display: flex
     flex-flow: column
@@ -72,7 +75,7 @@
     .post
       width: min(700px, 80%)
 
-#loading 
+#loading
   position: absolute
   width: 100%
   display: flex
@@ -80,8 +83,8 @@
   align-items: center
   height: calc(100vh - 50px)
   z-index: 9999999
-  
-#miniloading 
+
+#miniloading
     position: absolute
     width: 100%
     display: flex
