--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -57,6 +57,11 @@
           border: none
           color: white
           background-color: #2097B2FF
+          &:hover
+            cursor: pointer
+            background-color: #0e7e93
+          &:active
+            background-color: #0b5c6b
         .leaveButton
           font-weight: bold
           height: 30px
@@ -65,9 +70,15 @@
           border: none
           color: white
           background-color: #44d7a8
+          &:hover
+            cursor: pointer
+            background-color: #3EB28BFF
+          &:active
+            background-color: #2b836c
       #option
         margin-top: 0.5em
         margin-left: 0.75em
+        outline: none
   .groupFeed
     display: flex
     flex-flow: column
