--- a/src/app/components/signup/signup.component.scss
+++ b/src/app/components/signup/signup.component.scss
@@ -38,6 +38,25 @@
       position: relative;
       width: 100%;
       margin: 10px 20px 10px 20px;
+      .choose-file {
+        background-color: #2775D2;
+        color: #fff;
+        display: inline-block;
+	      width: 130px;
+        height: 40px;
+        padding: 0.5rem;
+        text-align: center;
+        border-radius: 0.5rem;
+        cursor: pointer;
+        margin-top: 1rem;
+        &:hover {
+          color: #00c2ef;
+	        border-left: 4px solid #00c2ef;
+        }
+      }
+      #file-chosen {
+        margin-left: 0.3rem;
+      }
       .input-icon {
         position: absolute;
         top: 50%;
