--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -27,7 +27,7 @@
         <i class="fas fa-ellipsis-h"></i>
       </button>
       <mat-menu #menu="matMenu" xPosition="after">
-        <button mat-menu-item (click)="deleteGroup()">
+        <button mat-menu-item style="outline: none" (click)="deleteGroup()">
           <mat-icon>delete_outline</mat-icon>
           <span>Delete Group</span>
         </button>
