--- a/src/app/components/group/group.component.html
+++ b/src/app/components/group/group.component.html
@@ -14,9 +14,10 @@
       </div>
       <div id="groupName">
         <div id="name">{{group.name}}</div>
-        <div id="memberCount">
+        <div id="nameBody">
           <div id="count">{{group.memberCount}}</div>
           <div id="icon"><i class="fa fa-user" aria-hidden="true"></i></div>
+          <div id="detail">{{group.detail}}</div>
         </div>
       </div>
       <div id="groupButton" (click)="joinOrLeaveGroup()">
