--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -40,13 +40,17 @@
           font-weight: bold
           font-size: 2rem
           line-height: normal
-        #memberCount
+        #nameBody
           display: flex
           #count
             font-size: 0.75rem
           #icon
             margin-left: 2px
+            margin-right: 10px
             font-size: 0.5rem
+          #detail
+            font-size: 0.75rem
+
       #groupButton
         margin-top: 14px
         .joinButton
