--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -50,7 +50,8 @@
             font-size: 0.5rem
           #detail
             font-size: 0.75rem
-
+            width: 40ch
+            word-wrap: normal
       #groupButton
         margin-top: 14px
         .joinButton
