--- a/src/app/components/creategroup/creategroup.component.html
+++ b/src/app/components/creategroup/creategroup.component.html
@@ -18,8 +18,16 @@
       <div class="input-box">
         <input class="input-text-box" type="text" placeholder="detail group" [(ngModel)]='createGroup.detail'>
       </div>
-        profile<input type="file" class="form-control" accept="image/*" (change)="uploadGroupProfile($event)">
-        banner <input type="file" class="form-control" accept="image/*" (change)="uploadGroupBanner($event)">
+      <div class="input-box">
+        <input type="file" id="actual-btn" accept="image/*" (change)="uploadGroupProfile($event)" hidden>
+        <label class="choose-file" for="actual-btn">Choose File</label>
+        <span id="file-chosen">Group Profile : {{ groupProfile }}</span>
+      </div>
+      <div class="input-box">
+        <input type="file" id="banner" accept="image/*" (change)="uploadGroupBanner($event)" hidden>
+        <label class="choose-file" for="banner">Choose File</label>
+        <span id="file-chosen">Group Banner : {{ groupBanner }}</span>
+      </div>
     </div>
     <div id="postBox">
       <div id="postinBox">
