--- a/src/app/components/creategroup/creategroup.component.scss
+++ b/src/app/components/creategroup/creategroup.component.scss
@@ -56,6 +56,25 @@
         position: relative;
         width: 100%;
         margin: 10px 20px 10px 20px;
+        .choose-file {
+          background-color: #2775D2;
+          color: #fff;
+          display: inline-block;
+          width: 130px;
+          height: 40px;
+          padding: 0.5rem;
+          text-align: center;
+          border-radius: 0.5rem;
+          cursor: pointer;
+          margin-top: 1rem;
+          &:hover {
+            color: #00c2ef;
+            border-left: 4px solid #00c2ef;
+          }
+        }
+        #file-chosen {
+          margin-left: 0.3rem;
+        }
         .input-text-box {
           width: calc(100% - 45px);
           height: calc(35px - 5px);
