--- a/src/app/components/feed/feed.component.html
+++ b/src/app/components/feed/feed.component.html
@@ -74,27 +74,15 @@
         </div>
         <div *ngIf="groupIsActive">
           <div id="allGroupShow" *ngFor="let group of allGroups">
-            <div class="groupCard">
+            <div class="groupCard" (click)="goToGroup(group.id)">
               <div class="cardLeft">
                 <div class="groupProfile">
-                  <img src={{group.group_profile}} (click)="goToGroup(group.id)" class="imgGroup" alt="">
+                  <img src={{group.group_profile}} class="imgGroup" alt="">
                 </div>
                 <div class="groupContent">
-                  <div class="groupName" (click)="goToGroup(group.id)">{{group.name}}</div>
+                  <div class="groupName">{{group.name}}</div>
                   <div class="groupDescription">{{group.detail}}</div>
                 </div>
-              </div>
-              <div class="cardRight">
-                <div *ngIf="group.isMember; else canJoin">
-                  <div class="joinButtonDis" (click)="leaveGroup(group)">
-                    Leave
-                  </div>
-                </div>
-                <ng-template #canJoin>
-                  <div class="joinButtonEna" (click)="joinGroup(group)">
-                    Join
-                  </div>
-                </ng-template>
               </div>
             </div>
           </div>
