--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -108,6 +108,10 @@ $colorTxt: rgb(51, 51, 51);
                     align-items: center;
                     justify-content: space-between;
                     padding: 10px 15px;
+                    &:hover {
+                        cursor: pointer;
+                        background-color: rgb(213, 255, 246);
+                    }
                     .cardLeft {
                         display: flex;
                         align-items: center;
@@ -120,17 +124,11 @@ $colorTxt: rgb(51, 51, 51);
                                 border-radius: 50%;
                                 background-color: #c4c4c4;
                             }
-                            &:hover {
-                                cursor: pointer;
-                            }
                         }
                         .groupContent {
                             margin-left: 10px;
                             .groupName {
                                 font-weight: bold;
-                                &:hover {
-                                    cursor: pointer;
-                                }
                             }
                             .groupDescription {}
                         }
