--- a/src/app/components/postfeed/postfeed.component.html
+++ b/src/app/components/postfeed/postfeed.component.html
@@ -60,7 +60,7 @@
             </div>
             <div *ngIf="videoId">
             <div id="linkEmbed">
-                <iframe width="560" height="315" [src]='urlSafe' frameborder="0" allowfullscreen></iframe>
+                <iframe id="linkEmbeded" width="560" height="315" [src]='urlSafe' frameborder="0" allowfullscreen></iframe>
             </div>
         </div>
     </div>
