fix size textbox create post

--- a/src/app/components/createpost/createpost.component.html
+++ b/src/app/components/createpost/createpost.component.html
@@ -15,11 +15,11 @@
     <div id="postBox">
       <div id="postinBox">
         <div id="areaText">
-          <div id="input-text">
+          <div id="inputText">
           <mat-form-field class="example-full-width" style="width: 100%;" appearance="fill">
               <mat-label>คุณกำลังคิดอะไรอยู่ อุจิว</mat-label>
               <!-- <textarea matInput placeholder="What are you comment ?" [(ngModel)]="comment"></textarea> -->
-              <textarea style="height: 100px" matInput placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
+              <textarea style="height: 150px" matInput placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea>
           </mat-form-field>
           </div>
           <!-- <textarea class="text-area" placeholder="คุณกำลังคิดอะไรอยู่ อุจิว" [(ngModel)]='createPost.content'></textarea> -->
