--- a/src/app/components/createpost/createpost.component.scss
+++ b/src/app/components/createpost/createpost.component.scss
@@ -60,6 +60,7 @@
           margin-left: 25px;
           width: 90%;
           #inputText{
+            width: 100%;
             .text-area {
               width: 100%;
               border: 1px solid #c4c4c4;
