--- a/src/app/components/postfeed/postfeed.component.scss
+++ b/src/app/components/postfeed/postfeed.component.scss
@@ -85,6 +85,7 @@
                 #headerRight {
                     #joinButton {
                         .editPost {
+                            outline: none;
                             z-index: 3;
                         }
                     }
