--- a/src/app/components/ranking/ranking.component.scss
+++ b/src/app/components/ranking/ranking.component.scss
@@ -53,6 +53,7 @@
             #picUser {
                 width: 30px;
                 height: 30px;
+                border-radius: 50%;
                 &:hover {cursor: pointer;}
             }
         }
