--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -4,7 +4,6 @@ $fontColor: white;
     background-color: #99D4D3;
     $navHeight: 50px;
     height: $navHeight;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     #content {
       display: flex;
       height: 100%;
@@ -53,9 +52,9 @@ $fontColor: white;
           height: 40px;
           border-radius: 20px;
           .profilePic {
-            background-color: white;
-            border-radius: 20px;
-            padding: 15px;
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
           }
           .userName {
             padding: 0px 5px;
