--- a/src/app/components/group/group.component.sass
+++ b/src/app/components/group/group.component.sass
@@ -100,10 +100,10 @@
         border-radius: 5px
         border: none
         color: white
-        background-color: #455b5b
+        background-color: #3EB28BFF
         &:hover
           cursor: pointer
-          background-color: #5c7575
+          background-color: #2b836c
           &:active
             background-color: #2e3f3f
     display: flex
