--- a/src/app/components/feed/feed.component.scss
+++ b/src/app/components/feed/feed.component.scss
@@ -187,7 +187,7 @@ $colorTxt: rgb(51, 51, 51);
             grid-column-start: 2;
             #filterContent {
                 width: 100%;
-                margin: 10px 0px;
+                margin: 5px 0px;
                 #txtFilter {
                     color: $colorTxt;
                     font-size: 15px;
@@ -200,7 +200,7 @@ $colorTxt: rgb(51, 51, 51);
                     margin-top: 5px;
                     height: 60px;
                     background-color: rgb(255, 255, 255);
-                    padding: 0px 20px;
+                    padding: 0px 10px;
                     border-radius: 5px;
                     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
                     #filterLeft {
@@ -240,6 +240,44 @@ $colorTxt: rgb(51, 51, 51);
                             &:hover {
                                 background-color: #99d4d36b;
                                 cursor: pointer;
+                            }
+                        }
+                        @media screen and (max-width: 800) {
+                            #newButtonDis, #groupButtonDis, #popularButtonDis {
+                                display: none;
+                                display: flex;
+                                align-items: center;
+                                border-radius: 20px;
+                                color: #7a7a7a;
+                                margin-right: 10px;
+                                height: 60%;
+                                padding: 5px 10px;
+                                transition: 0.3s;
+                                .logo {
+                                    margin-right: 5px
+                                }
+                                &:hover {
+                                    background-color: #c4c4c4;
+                                    cursor: pointer;
+                                }
+                            }
+                            #newButton, #groupButton, #popularButton {
+                                display: flex;
+                                align-items: center;
+                                border-radius: 10px;
+                                color: #1B4E8C;
+                                background-color: #99d4d36b;
+                                margin-right: 20px;
+                                height: 60%;
+                                padding: 5px 10px;
+                                transition: 0.3s;
+                                .logo {
+                                    margin-right: 5px
+                                }
+                                &:hover {
+                                    background-color: #99d4d36b;
+                                    cursor: pointer;
+                                }
                             }
                         }
                     }
