--- a/src/app/components/navbar/navbar.component.scss
+++ b/src/app/components/navbar/navbar.component.scss
@@ -115,7 +115,6 @@ $fontColor: white;
 
 @media (max-width: 600px) { 
   #navbar {
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
     background-color: #99D4D3;
     $navHeight: 50px;
     height: $navHeight;
@@ -175,9 +174,9 @@ $fontColor: white;
           height: 40px;
           border-radius: 20px;
           .profilePic {
-            background-color: white;
-            border-radius: 20px;
-            padding: 15px;
+            width: 35px;
+            height: 35px;
+            border-radius: 50%;
           }
           .userName {
             display: none;
