delete log fix miniBug & delete useless function

--- a/src/app/components/post/post.component.html
+++ b/src/app/components/post/post.component.html
@@ -34,7 +34,7 @@
                                         <div id="postTime">{{ comment.created_at | date : 'd  MMM YYYY h:mm a': 'UTC +14' }}</div>
                                     </div>
                                         <div class="content-text">
-                                            <div id="text">{{comment.content}}</div>
+                                            <pre id="text">{{comment.content}}</pre>
                                         </div>
                                 </div>
                                 <div class="change-comment">
